# flawchess

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.worker  LICENSE  README.md  REMOTE_WORKER.md  alembic.ini  docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  renovate.json
.claude/: gsd-file-manifest.json  settings.json
.github/workflows/: ci.yml  codeql.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.19-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: dashboard-no-data.md  dashboard-shows-placeholder-instead-of-games.md  entry-submit-n-plus-1.md  game-card-missing-usernames.md  import-job-db-conn-closed.md  import-modal-second-platform.md  insights-diskfull-shm.md  lichess-import-truncated-191-of-1201.md  llm-prompt-missing-sections.md  sort-order-always-zero.md  stats-pages-empty-state.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-ROADMAP.md  v1.11-REQUIREMENTS.md  v1.11-ROADMAP.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.13-REQUIREMENTS.md  v1.13-ROADMAP.md  v1.14-ROADMAP.md  (+56 more)
alembic/: env.py
app/: main.py  users.py
deploy/: Caddyfile  cloud-init.yml  entrypoint.sh  init-benchmark-db.sql  init-dev-db.sql
docs/: bot-playstyles.md  flaw-tag-definitions.md  flawchess-engine-explained-2026-07-06.md
frontend/: Dockerfile  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
reports/: benchmark-db-phase69-verification-2026-04-26.md  benchmark-eval-coverage-2026-05-23.md  benchmark-eval-outcome-consistency-2026-05-23.md  benchmark-eval-outcome-consistency-2026-05-25.md  benchmarks-2026-04-16.md  benchmarks-2026-04-18.md  benchmarks-2026-04-24.md  benchmarks-2026-04-25.md  benchmarks-2026-04-29-old.md  benchmarks-2026-04-30.md  benchmarks-2026-05-01.md  benchmarks-2026-05-03-no-strength-matching.md  benchmarks-2026-05-03.md  benchmarks-2026-05-04-section-3.md  benchmarks-2026-05-04.md  benchmarks-2026-05-10-tighter-opponent-strength-matching.md  benchmarks-2026-05-10.md  benchmarks-2026-05-11.md  benchmarks-2026-05-12.md  benchmarks-2026-05-14.md  benchmarks-2026-05-15.md  benchmarks-2026-05-17.md  benchmarks-diff-2026-05-17-vs-2026-05-19.md  benchmarks-gap-metrics-percentile-candidacy.md  benchmarks-latest.md  code-review-2026-07-02.md  cohort-percentile-cdf-latest.md  conv-recov-validation-2026-05-01.md  conv-recov-validation-2026-05-02.md  db-report-prod-2026-04-16.md  db-report-prod-2026-04-21.md  db-report-prod-2026-04-25.md  db-report-prod-2026-04-29.md  db-report-prod-2026-05-08.md  db-report-prod-2026-05-22.md  endgame-categorization-sanity-check.md  endgame-conversion-recovery-analysis.md  flawchess_quality_assessment.md  flawchess_quality_assessment_2026-04-17.md  flawchess_quality_assessment_2026-04-18.md  (+5 more)
scripts/: __init__.py  ab_validate_gate.py  backfill_accuracy_acpl.py  backfill_best_move_pv.py  backfill_eval.py  backfill_flaws.py  backfill_full_evals.py  backfill_multipv.py  backfill_opening_eval_cache.py  backfill_positions.py  backfill_tactic_tags.py  backfill_user_percentiles.py  calibration-anchor-ladder.mjs  calibration-harness.mjs  calibration_anchor_fit.py  calibration_persona_fit.py  gem-elo-calibration.mjs  gen_benchmarks.py  gen_bot_strength_confirmation_cells.py  gen_bot_strength_curves.py  gen_endgame_zones_ts.py  gen_flaw_thresholds_ts.py  gen_global_percentile_cdf.py  gen_persona_avatars.py  gen_persona_calibration.py  gen_write_path_golden.py  import_benchmark_users.py  import_stress_monitor.py  inspect_maia_onnx.mjs  maia_parity_spike.py  maia_reference_capture.mjs  measure_dual_import_rss.py  measure_maia_rss.py  prodcheck_80_1.py  reclassify_positions.py  reimport_games.py  reindex_game_positions.py  reindex_table.py  remote_eval_worker.py  resweep_holed_games.py  (+11 more)
tests/: conftest.py  seed_fixtures.py  test_admin_users_search.py  test_aggregation_sanity.py  test_analysis_repository.py  test_analysis_service.py  test_auth.py  test_backfill.py  test_backfill_flaws.py  test_backfill_multipv.py  test_benchmark_ingest.py  test_bookmark_repository.py  test_bookmark_schema.py  test_bookmarks_router.py  test_bot_pgn_clk_roundtrip.py  test_chesscom_client.py  test_config_secret_key.py  test_dependency_isolation.py  test_endgame_repository.py  test_endgame_service.py  test_endgame_zones.py  test_endgames_router.py  test_eval_queue_service.py  test_eval_remote_schema_bounds.py  test_eval_worker_endpoints.py  test_feedback_repository.py  test_feedback_router.py  test_flaw_predicate.py  test_flaws_materialization.py  test_flaws_repository.py  test_game_flaws_model.py  test_game_repository.py  test_game_repository_bulk_insert_positions.py  test_guest_auth.py  test_guest_google_promotion.py  test_impersonation.py  test_import_service.py  test_imports_router.py  test_insights_llm_thinking.py  test_insights_router.py  (+44 more)
(+4694 files in other folders)
