[project]
name = "flawchess"
version = "0.1.0"
description = "Multi-user chess analysis platform with Zobrist hash position matching"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "chess>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[anthropic,google]>=1.85,<2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.4",
    "httpx-oauth>=0.16.1",
    "sentry-sdk[fastapi]>=2.54.0",
    "genai-prices>=0.0.56,<0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "ty>=0.0.26",
    "zstandard>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]  # SQLAlchemy forward references in relationship() strings
"alembic/versions/*.py" = ["F401"]  # Alembic auto-imports sa/op that may appear unused

[tool.ty.rules]
# Warn on unused suppression comments so stale ignores don't accumulate
unused-ignore-comment = "warn"
