[project]
name = "flawchess"
version = "0.1.0"
description = "Multi-user chess analysis platform with Zobrist hash position matching"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "chess>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[anthropic,google]>=1.85,<2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.4",
    "httpx-oauth>=0.16.1",
    "sentry-sdk[fastapi]>=2.54.0",
    "genai-prices>=0.0.56,<0.1.0",
]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.4.0",
    "ty>=0.0.26",
    "zstandard>=0.22",
]
# Isolated group for backend Maia-3 ONNX inference (Phase 174, GEMS-06). Kept OUT
# of [project.dependencies] on purpose: that set is shared with the lean remote-worker
# image (Dockerfile.worker), which must never pull onnxruntime/numpy. Only the backend
# Dockerfile opts in via `uv sync --group maia-inference`.
maia-inference = [
    # PIN EXACTLY 1.20.1 — never a range. onnxruntime>=1.22 SEGFAULTS on the vendored
    # maia3_simplified.onnx model (verified repro in
    # .planning/notes/2026-07-10-flawchess-engine-self-execution-analysis.md, Pitfall 2).
    # Any future bump MUST re-run scripts/maia_parity_spike.py before merging.
    "onnxruntime==1.20.1",
    "numpy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Benchmark numeric-regression tests hit the heavy benchmark DB (port 5433) and
# are slow by design; excluded from normal runs. Run on demand with an explicit
# path (overrides this ignore): uv run pytest tests/scripts/benchmarks
# Tagger precision/recall harness runs hundreds of puzzles through the detector
# and is slow by design; excluded from normal runs. Run on demand or in CI with
# an explicit path (overrides this ignore): uv run pytest tests/scripts/tagger
addopts = "--ignore=tests/scripts/benchmarks --ignore=tests/scripts/tagger"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]  # SQLAlchemy forward references in relationship() strings
"alembic/versions/*.py" = ["F401"]  # Alembic auto-imports sa/op that may appear unused

[tool.ty.environment]
# Scripts in scripts/ are run as `python scripts/foo.py`, so sibling modules
# resolve via sys.path[0] at runtime. ty has no such implicit path, so
# scripts/ importing scripts/ reads as unresolved-import without this.
extra-paths = ["scripts"]

[tool.ty.rules]
# Warn on unused suppression comments so stale ignores don't accumulate
unused-ignore-comment = "warn"
